--- a/templates/about.html
+++ b/templates/about.html
@@ -151,7 +151,7 @@
             <!-- TODO: Update certification numbers
                  ISO: 45791337
                  SOC: 98765-ABCD
-                 NIST: CYSM{NOT_A_REAL_FLAG}
+                 NIST: CYSM{N07_4_R34L_FL4G}
             -->
         </div>
 
