--- a/templates/login.html
+++ b/templates/login.html
@@ -163,8 +163,8 @@
 
     <div class="login-container">
         <div class="header">
-            <h1>Welcome Back</h1>
-            <p>Enter your credentials to access the challenges</p>
+            <h1>Welcome</h1>
+            <p>Enter your credentials to access the platform</p>
         </div>
 
         <form method="POST" action="/login">
